# nixify

./: .gitignore  README.md  flake.nix  garnix.yaml
.github/: dependabot.yml
.github/actions/build-nix/: action.yml
.github/actions/install-nix/: action.yml
.github/workflows/: build.yml  check.yml  dependabot.yml  templates.yml  update.yml
checks/: default.nix
examples/rust-bindeps/: Cargo.toml  flake.nix
examples/rust-bindeps/src/: main.rs
examples/rust-complex/: Cargo.toml  flake.nix  rust-toolchain.toml
examples/rust-complex/foo/: Cargo.toml
examples/rust-complex/foo/src/: main.rs
examples/rust-complex/src/: lib.rs
examples/rust-exclude-path/: Cargo.toml  flake.nix
examples/rust-exclude-path/tests/: exclude.rs
examples/rust-hello/: Cargo.toml  flake.nix  rust-toolchain.toml
examples/rust-hello-multibin/: Cargo.toml  flake.nix  rust-toolchain.toml
examples/rust-hello-multibin/src/: main.rs
examples/rust-lib/: Cargo.toml  flake.nix
examples/rust-unsupported-target/: Cargo.toml  flake.nix  rust-toolchain.toml
examples/rust-workspace/: Cargo.toml  flake.nix
examples/rust-workspace/hello/: Cargo.toml
examples/rust-workspace/hello2/: Cargo.toml
examples/rust-workspace/lib/: Cargo.toml
examples/rust-workspace/other/fourty-two/: Cargo.toml
examples/rust-workspace/src/: main.rs
lib/: default.nix  extendDerivations.nix  mkFlake.nix
lib/rust/: crateBins.nix  default.nix  defaultPkgsFor.nix  mkAttrs.nix  mkChecks.nix  mkFlake.nix  mkOverlay.nix  mkPackages.nix
templates/: default.nix
templates/rust/: flake.nix
