[package]
name = "rust-complex"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[dependencies]
complex-foo = { workspace = true }
ring = { workspace = true }

[target.'cfg(windows)'.dependencies]
complex-foo = { workspace = true, features = ["windows"] }

[dev-dependencies]
rust-complex = { path = "." }

[workspace.dependencies]
complex-foo = { path = "./foo" }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
