[package]
name = "rust-hello-multibin"
version = "0.1.0"
edition = "2021"

[features]
some = []
default = ["some"]

[[bin]]
bench = true
name = "hello-other-path"
path = "src/bin/hello.rs"
test = true

[[bin]]
name = "bye"
required-features = ["some"]

[[bin]]
name = "rust-hello-multibin"

[dependencies]
